# streaming-voice-api

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
streaming_voice_api/: foo.py
tests/: test_foo.py
