[project]
name = "streaming-voice-api"
version = "0.0.1"
description = "An"
authors = [
    { name = "notnodnod", email = "190180894+notnodnod@users.noreply.github.com" },
]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.13,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://notnodnod.github.io/streaming-voice-api/"
Repository = "https://github.com/notnodnod/streaming-voice-api"
Documentation = "https://notnodnod.github.io/streaming-voice-api/"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
    "tox-uv>=1.16.0",
    "deptry>=0.21.1",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.47",
    "mkdocstrings[python]>=0.27.0",
]

[build-system]
requires = ["setuptools >= 75.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["streaming_voice_api"]

[tool.mypy]
files = ["streaming_voice_api"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["streaming_voice_api"]
